<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestAndroidApp002</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt1">1</string>
    <string name="txt2">2</string>
    <string name="txt3">3</string>
    <string name="txt4">4</string>
    <string name="txt5">5</string>
    <string name="txtinput1"></string>
    <string name="txtinput2"></string>
    <string name="txtinput3"></string>
    <string name="txtinput5"></string>
    <string name="txtinput4"></string>
    <string name="plus">+</string>
    <string name="minux">-</string>
    <string name="minus">-</string>
    <string name="deb">/</string>
    <string name="kake">*</string>

</resources>
