<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.e2013051.testandroidapp002.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="number"
            android:singleLine="true"
            android:text="@string/txtinput1" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/EditText01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="number"
            android:singleLine="true"
            android:text="@string/txtinput2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt3"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/EditText02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="number"
            android:singleLine="true"
            android:text="@string/txtinput3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout3" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt4"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/EditText03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="number"
            android:singleLine="true"
            android:text="@string/txtinput4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout4" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt5"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/EditText04"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="number"
            android:singleLine="true"
            android:text="@string/txtinput5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout5"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/plus" />

        <Button
            android:id="@+id/button2"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/minus" />

        <Button
            android:id="@+id/button3"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/kake" />

        <Button
            android:id="@+id/button4"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/deb" />
    </LinearLayout>

</RelativeLayout>